# marketplaces-mcp-ru

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE_CODE_MISSION.md  CONTRIBUTING.md  GEMINI.md  HANDOFF.md  MANIFEST.in  PRIVACY_POLICY.md  QUICKSTART.md  README.en.md  README.md  SECURITY.md  gemini-extension.json  install.bat  install.command  install.py  install.sh  pyproject.toml  serve.py  win_diag.py
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml  security.yml  supply-chain.yml
core/: client.py  entities.py  entities.yaml  registry.py  safety.py  tools.py
docs/superpowers/plans/: 2026-06-24-method-entity-map.md
docs/superpowers/specs/: 2026-06-24-method-entity-map-design.md  2026-06-24-terminal-free-cabinet-key-lifecycle-design.md
install-skill/: SKILL.md
ozon_mcp/: __init__.py  endpoints.yaml  perf_endpoints.yaml  server.py  workflows.yaml
ozon_perf_mcp/: __init__.py  server.py  workflows.yaml
scripts/: derive_pagination.py  fix_items_path_from_examples.py  ingest_ozon.py  ingest_specs.py  make_social_preview.py  package_release.py  smoke_mcp.py  sync_swagger.py  validate_items_path.py
scripts/security/: forbid_sensitive_files.py  scan_mcp_config.py
tests/: test_cabinet_keys.py  test_client_misc.py  test_credentials_hardening.py  test_entities.py  test_entity_map_tool.py  test_fetch_all_safety.py  test_install.py  test_mock.py  test_perf_oauth.py  test_registry_entity.py  test_safety_catalog.py  test_serve_deps.py
wb_mcp/: __init__.py  endpoints.yaml  server.py  workflows.yaml
