[project]
name = "marketplace-mcp"
version = "0.1.0"
description = "MCP servers for Wildberries and Ozon Seller APIs (schema-driven, safety-gated)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
wb-mcp = "wb_mcp.server:main"
ozon-mcp = "ozon_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "wb_mcp", "ozon_mcp"]

[tool.setuptools.package-data]
wb_mcp = ["endpoints.yaml"]
ozon_mcp = ["endpoints.yaml"]
